--- a/TrackerWatchServer/Support/map.htm
+++ b/TrackerWatchServer/Support/map.htm
@@ -191,9 +191,7 @@
         //To add the Pushpin object on the map.
         function AddPushPinOnMap(lat, lng, title,description,icon_path,centered)
         {
-
                 loc = new VELatLong(parseFloat(lat),parseFloat(lng));
-
                 // Store the location in an array.
                 locs.push(loc);
 
@@ -201,13 +199,9 @@
                 // Set custom icon for the pushpin.
                 shape.SetTitle(title);
                 shape.SetDescription(description);
-                //if(icon_path)
-               // {
                	shape.SetCustomIcon("<span style='font-family:Arial; font-size:x-small;" +
                                     "color:Black; background-color:transparent'>" +
                                     "<img src='"+icon_path+"'/></span>");
-               // }
-
                 // Add shape to the map.
                 map.AddShape(shape);
 
@@ -215,6 +209,24 @@
                 {
                     map.SetCenter(new VELatLong(lat, lng));
                 }
+        }
+
+
+        function AddMultiPinOnMap(lat, lng, description) {
+            loc = new VELatLong(parseFloat(lat), parseFloat(lng));
+            // Store the location in an array.
+            locs.push(loc);
+
+            var shape = new VEShape(VEShapeType.Pushpin, loc);
+            // Set custom icon for the pushpin.
+            shape.SetTitle("Storico");
+            shape.SetDescription(description);
+            /*shape.SetCustomIcon("<span style='font-family:Arial; font-size:x-small;" +
+                                "color:Black; background-color:transparent'>" +
+                                "<img src='" + icon_path + "'/></span>");*/
+            // Add shape to the map.
+            map.AddShape(shape);
+            //window.alert(lat.length);
         }
 
        //To a polygon object on the map.
